tests/errors/duplicate-def/main.pa
def config = 1

def config = 2
